--- a/src/configs/transformer.yml
+++ b/src/configs/transformer.yml
@@ -4,6 +4,7 @@ model_name: distilbert-base-uncased
 max_length: 32
 num_epochs: 1
 batch_size: 16
+num_labels: 9
 learning_rate: 2e-5
 warmup_ratio: 0.1
 text_column: memo
